--- a/screen-reader.html
+++ b/screen-reader.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,13 +8,13 @@
   </head>
   <body>
     <a href="index.html" class="back-link">← Back to Workshop Index</a>
-    <main>
-      <h1>Exercise 1: Screen Reader Accessibility</h1>
-      <p>
-        In this exercise, you'll learn how to make web content accessible to
-        screen readers by fixing non-semantic HTML.
-      </p>
+    <h1>Exercise 1: Screen Reader Accessibility</h1>
+    <p>
+      In this exercise, you'll learn how to make web content accessible to
+      screen readers by fixing non-semantic HTML.
+    </p>
 
+    <main>
       <div class="exercise-content">
         <section class="instructions">
           <h2>Instructions</h2>
@@ -42,52 +42,71 @@
           <h2>Example to Fix</h2>
           <!-- Non-semantic website example -->
           <div class="practice-area">
-            <div class="header">
-              <span class="title">My Website</span>
-            </div>
+            <header class="header">
+              <h1 class="title">My Website</span>
+                <nav class="nav">
+                  <ol aria-label="Nav item list">
+                    <li>
+                      <a href="/">
+                        Home
+                      </a> 
+                    </li>
+                    <li>
+                      <a href="/">
+                        About
+                      </a> 
+                    </li>
+                    <li>
+                      <a href="/">
+                        Home
+                      </a> 
+                    </li>
+                  </ol>
+                </nav>
+            </header>
 
-            <div class="nav">
-              <div>Home</div>
-              <div>About</div>
-              <div>Contact</div>
-            </div>
 
-            <div class="main-content">
-              <div class="section">
-                <span class="big-text">Welcome to our page</span>
-                <div class="text">Here is some important information.</div>
-              </div>
+            <main class="main-content">
+              <section class="section">
+                <h2 class="big-text">Welcome to our page</h2>
+                <p class="text">Here is some important information.</p>
+              </section>
 
-              <div class="section">
-                <span class="big-text">Latest Updates</span>
-                <div class="text">Check out our new features!</div>
-              </div>
+              <section class="section">
+                <h2 class="big-text">Latest Updates</h2>
+                <p class="text">Check out our new features!</p>
+              </section>
 
-              <div class="form-container">
-                <div class="form-title">Contact Us</div>
-                <div>
-                  <span>Name:</span>
-                  <input type="text" />
+              <form aria-label="Contact us form" class="form-container">
+                <h2 class="form-title">Contact Us</h2>
+                <div aria-label="Full name input container">
+                  <label for="full-name-input">
+                    Full Name:
+                    <input id="full-name-input" type="text" />
+                  </label>
+                </div>
+                <div aria-label="Email input container">
+                  <label for="email-input">Email:</label>
+                  <input id="email-input" type="email" />
+                </div>
+                <div aria-label="Message input container">
+                  <label for="message-input" >Message:</label>
+                  <input id="message-input" type="text" />
+                </div>
+                <div aria-label="Subscribe to newsletter option container">
+                  <label for="subscribe-to-newsletter-option">Subscribe to Newsletter</label>
+                  <input id="subscribe-to-newsletter-option" type="checkbox" />
                 </div>
                 <div>
-                  <span>Email:</span>
-                  <input type="text" />
+                  <label for="form-submit-button">Submit Contact Us Form</label>
+                  <input id="form-submit-button" type="submit" class="submit-button">
                 </div>
-                <div>
-                  <span>Message:</span>
-                  <input type="text" />
+                  <!-- <button onclick="alert('Form submitted!')" class="submit-button">
+                    Submit Form -->
+                  </input>
                 </div>
-                <div>
-                  <span>Subscribe to Newsletter</span>
-                  <input type="checkbox" />
-                </div>
-                <div>
-                  <div onclick="alert('Form submitted!')" class="submit-button">
-                    Submit Form
-                  </div>
-                </div>
-              </div>
-            </div>
+              </form>
+            </main>
           </div>
         </section>
 
