feat: Tab-able and fully informative, intuitive structure

--- a/screen-reader.html
+++ b/screen-reader.html
@@ -45,40 +45,40 @@
             <header class="header">
               <h1 class="title">My Website</span>
                 <nav class="nav">
-                  <ol aria-label="Nav item list">
+                  <ul aria-label="Nav item list">
                     <li>
-                      <a href="/">
+                      <a href="#">
                         Home
                       </a> 
                     </li>
                     <li>
-                      <a href="/">
+                      <a href="#">
                         About
                       </a> 
                     </li>
                     <li>
-                      <a href="/">
+                      <a href="#">
                         Home
                       </a> 
                     </li>
-                  </ol>
+                  </ul>
                 </nav>
             </header>
 
 
             <main class="main-content">
-              <section class="section">
+              <section tabindex="0" role="region" aria-label="Welcome info" class="section">
                 <h2 class="big-text">Welcome to our page</h2>
                 <p class="text">Here is some important information.</p>
               </section>
 
-              <section class="section">
+              <section tabindex="0" role="region" aria-label="Latest updates" class="section">
                 <h2 class="big-text">Latest Updates</h2>
                 <p class="text">Check out our new features!</p>
               </section>
 
               <form aria-label="Contact us form" class="form-container">
-                <h2 class="form-title">Contact Us</h2>
+                <h2 tabindex="0" class="form-title">Contact Us</h2>
                 <div aria-label="Full name input container">
                   <label for="full-name-input">
                     Full Name:
