chore: Formatting changes to screen reader exercise

--- a/screen-reader.html
+++ b/screen-reader.html
@@ -46,25 +46,12 @@
               <h1 class="title">My Website</span>
                 <nav class="nav">
                   <ul aria-label="Nav item list">
-                    <li>
-                      <a href="#">
-                        Home
-                      </a> 
-                    </li>
-                    <li>
-                      <a href="#">
-                        About
-                      </a> 
-                    </li>
-                    <li>
-                      <a href="#">
-                        Home
-                      </a> 
-                    </li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
                   </ul>
                 </nav>
             </header>
-
 
             <main class="main-content">
               <section tabindex="0" role="region" aria-label="Welcome info" class="section">
@@ -79,31 +66,32 @@
 
               <form aria-label="Contact us form" class="form-container">
                 <h2 tabindex="0" class="form-title">Contact Us</h2>
+                
                 <div aria-label="Full name input container">
-                  <label for="full-name-input">
-                    Full Name:
-                    <input id="full-name-input" type="text" />
-                  </label>
+                  <label for="full-name-input">Full Name:</label>
+                  <input id="full-name-input" type="text" />
                 </div>
+
                 <div aria-label="Email input container">
                   <label for="email-input">Email:</label>
                   <input id="email-input" type="email" />
                 </div>
+
                 <div aria-label="Message input container">
                   <label for="message-input" >Message:</label>
                   <input id="message-input" type="text" />
                 </div>
+
                 <div aria-label="Subscribe to newsletter option container">
                   <label for="subscribe-to-newsletter-option">Subscribe to Newsletter</label>
                   <input id="subscribe-to-newsletter-option" type="checkbox" />
                 </div>
+
                 <div>
                   <label for="form-submit-button">Submit Contact Us Form</label>
-                  <input id="form-submit-button" type="submit" class="submit-button">
+                  <input id="form-submit-button" type="submit" class="submit-button" />
                 </div>
-                  <!-- <button onclick="alert('Form submitted!')" class="submit-button">
-                    Submit Form -->
-                  </input>
+
                 </div>
               </form>
             </main>
