--- a/tab-trapping.html
+++ b/tab-trapping.html
@@ -93,17 +93,21 @@
       const handleTabKey = (e) => {
         if (e.key !== "Tab") return;
         const focusableElements = getFocusableElements();
-        let currentFocusIndex = 0;
+
+        const firstEl = focusableElements[0];
+        const lastEl = focusableElements[focusableElements - 1];
+
+        const activeEl = document.activeElement;
+
         if (e.shiftKey) {
+          if (activeEl === firstEl) {
+            e.preventDefault();
+            lastEl.focus();
+          }
         } else {
-          if (currentFocusIndex !== focusableElements.length - 1) {
+          if (activeEl === lastEl) {
             e.preventDefault();
-            currentFocusIndex += 1;
-            focusableElements[currentFocusIndex].focus();
-          } else {
-            e.preventDefault();
-            currentFocusIndex = 0;
-            focusableElements[currentFocusIndex].focus();
+            firstEl.focus();
           }
         }
       };
